--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1 class="text-center">Quiz de Conjugació en Valencià</h1>
     <div class="card p-4 mt-4">
         <p id="question" class="fs-4 text-center"></p>
-        <input type="text" id="answer" class="form-control text-center">
+        <input type="text" id="answer" class="form-control text-center" autocapitalize="none">
         <button id="next" class="btn btn-primary mt-3">Següent</button>
     </div>
 
